<resources>
    <string name="app_name">Inventory App</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_product">Add Product</string>
    <string name="empty_view">Your inventory is empty</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="btn_select_image">Select Image</string>
    <string name="default_product_name">Product 1</string>
    <string name="list_product_quantity">Quantity:</string>
    <string name="default_product_quantity">0</string>
    <string name="product_price">Price:</string>
    <string name="default_product_price">400.00</string>
    <string name="btn_buy_product">Buy Product</string>
    <string name="edit_name">Name:</string>
    <string name="edit_price">Price:</string>
    <string name="edit_quantity">Quantity available:</string>
    <string name="btn_quantity">Modify Quantity</string>
    <string name="btn_order">Order More</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="buy_product_failed">No more product</string>
    <string name="edit_product">Edit Product</string>
    <string name="email_subject">Order for</string>
    <string name="hello">Hello,</string>
    <string name="message">I would like to order....</string>
    <string name="product_name_title">Product Name:</string>
    <string name="thank">Thank you!</string>
    <string name="update_product_failed">Error updating product</string>
    <string name="update_product_successful">Product updated successful</string>
    <string name="delete_dialog_title">Are you sure you want to delete the product?</string>
    <string name="delete_product_failed">Error deleting product</string>
    <string name="delete_product_successful">Product deleted successful</string>
    <string name="product_info_not_empty">Please fill out all the required information</string>
    <string name="external_storage">External storage</string>
    <string name="permission_title">Permission necessary</string>
    <string name="permission_message">permission is necessary</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="default_product_supplier">John</string>
    <string name="product_supplier">Supplier: </string>
    <string name="supplier">Supplier </string>
    <string name="default_product_phone">253695224</string>
    <string name="product_phone">Phone: </string>
    <string name="phone">Phone </string>
</resources>
