<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:textSize="30sp"
        android:text="@string/default_product_name"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@color/colorPrimary" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher"
        android:gravity="center"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/list_product_margin">

        <TextView
            android:id="@+id/textview_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_product_margin"
            android:layout_toRightOf="@id/quantity"
            android:fontFamily="sans-serif-medium"
            android:text="@string/default_product_quantity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="sans-serif-medium"
            android:text="@string/list_product_quantity"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimaryDark"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/list_product_margin">

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/product_price"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textview_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_product_margin"
            android:layout_toRightOf="@id/price"
            android:fontFamily="sans-serif-medium"
            android:text="@string/default_product_price"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/list_product_margin">

        <TextView
            android:id="@+id/supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/product_supplier"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textview_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_product_margin"
            android:layout_toRightOf="@id/supplier"
            android:fontFamily="sans-serif-medium"
            android:text="@string/default_product_supplier"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/list_product_margin">

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/product_phone"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/textview_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/list_product_margin"
            android:layout_toRightOf="@id/phone"
            android:fontFamily="sans-serif-medium"
            android:text="@string/default_product_phone"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorPrimary" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/list_product_margin"
            android:background="@drawable/button_drawable"
            android:text="@string/btn_buy_product"
            android:textColor="@color/colorWhite"
            android:focusable="false"/>

    </RelativeLayout>

</LinearLayout>