<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/edit_activity_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/edit_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/edit_text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:textColor="@color/colorPrimaryDark"
            android:fontFamily="sans-serif"
            android:text="@string/default_product_name"
            android:textSize="22sp" />

    </LinearLayout>

    <ImageView
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/product_price"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/edit_text_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:fontFamily="sans-serif"
            android:inputType="numberDecimal"
            android:text="@string/default_product_price"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtSupplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/product_supplier"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/edit_text_supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:fontFamily="sans-serif"
            android:text="@string/default_product_supplier"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/product_phone"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:text="@string/default_product_phone"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/edit_quantity"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/text_view_quantity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:fontFamily="sans-serif"
            android:inputType="number"
            android:text="@string/default_product_quantity"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:layout_marginRight="20dp"/>


        <ImageButton
            android:id="@+id/imageButtonDecrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_drawable"
            android:gravity="center"
            android:onClick="EditQuantity"
            app:srcCompat="@drawable/round_expand_more_white_48" />

        <ImageButton
            android:id="@+id/imageButtonIncrease"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_drawable"
            app:srcCompat="@drawable/round_expand_less_white_48"
            android:layout_margin="10dp"
            android:onClick="EditQuantity"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/edit_activity_margin"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/btn_order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edit_activity_margin"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_drawable"
            android:onClick="onOrder"
            android:text="@string/btn_order" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_activity_margin"
        android:layout_marginTop="@dimen/edit_activity_margin"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_drawable"
        android:onClick="onSave"
        android:text="@string/btn_save"
        android:layout_marginBottom="5dp"
        />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_activity_margin"
        android:layout_marginTop="@dimen/edit_activity_margin"
        android:background="@drawable/button_drawable"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:onClick="onDelete"
        android:text="@string/btn_delete" />

</LinearLayout>
    </ScrollView>